# quadcoil_proto

./: .gitmodules  CMakeLists.txt  call_solvers.py  coil_utils.py  cutting_functions.py  cvxpy_utils.py  jax_solver.py  plotting_utils.py  quadcoil_solve.py  simple_L2.py  surfacerzfourier_jax.py  test_cpp.ipynb  test_cpp.py  utils.py  winding_surface_jax.py
example/: quadcoil_implicit.ipynb  quadcoil_jax.ipynb  quadcoil_single_stage.ipynb  quadcoil_single_stage_optimize.ipynb  quadcoil_single_stage_profile.ipynb
example/2023-09-14.MagneticGradientScalength/: finalData_RMSB_0.01_targetMaxK_17.16e6_REGRES.csv
example/2023-09-14.MagneticGradientScalength/bnorm/: bnorm.1020_1080_0930_0843_+0000_+0000_01_166_fixedb_aScaling  bnorm.20220102-01-053-003_QH_nfp4_aspect6p5_beta0p05_iteratedWithSfincs  bnorm.ARIES-CS_aScaling  bnorm.Drevlak_qh_8_7_aScaling  bnorm.GarabedianQAS2_aScaling  bnorm.QA_beta0p025_iota0p42_dreopt_HIGHERRES_2022-04-15  bnorm.QPS_030703_r1_5mod_bt2_aScaling  bnorm.Spong_20160107_ITER_hybridAxisymmFixedBoundary_lasymF_aScaling  bnorm.W7-X_standard_configuration_aScaling  bnorm.d23p4_tm_aScaling  bnorm.d23p4_tm_gamma0_aScaling  bnorm.li383_1.4m_aScaling  bnorm.n3are_R7.75B5.7  bnorm.n4qh.b4.a79a_aScaling  bnorm.ncsx_c09r00_fixed_aScaling  bnorm.st_a34_i32v22_beta_35_scaledAUG_aScaling
example/2023-09-14.MagneticGradientScalength/vcasing/: vcasing_1020_1080_0930_0843_+0000_+0000_01_166_fixedb_aScaling.nc  vcasing_20220102-01-053-003_QH_nfp4_aspect6p5_beta0p05_iteratedWithSfincs.nc  vcasing_20220609-02-032_QH_nfp3_A6_aScaling.nc  vcasing_GarabedianQAS2_aScaling.nc  vcasing_QA_beta0p025_iota0p42_dreopt_HIGHERRES_2022-04-15.nc  vcasing_QPS_030703_r1_5mod_bt2_aScaling.nc  vcasing_Spong_20160107_ITER_hybridAxisymmFixedBoundary_lasymF_aScaling.nc  vcasing_W7-X_standard_configuration_aScaling.nc  vcasing_d23p4_tm_gamma0_aScaling.nc  vcasing_li383_1.4m_aScaling.nc  vcasing_n3are_R7.75B5.7.nc  vcasing_n4qh.b4.a79a_aScaling.nc  vcasing_ncsx_c09r00_fixed_aScaling.nc  vcasing_st_a34_i32v22_beta_35_scaledAUG_aScaling.nc  vcasing_vmec_0kA_aScaling.nc  vcasing_vmec_highiota_0kA_aScaling.nc
example/plasma_surface/: 1020_1080_0930_0843_+0000_+0000_01_166_fixedb_aScaling.npy  20210728-01-026_QH_nfp4_A8_magwell_aScaling.npy  20220102-01-053-003_QH_nfp4_aspect6p5_beta0p05_iteratedWithSfincs.npy  20220102-01-055_QH_A6.5_beta0_aScaling.npy  20220124-01-GiulianiSurfaceOptVmecAnalysis_len24_aScaling.npy  20220124_qfm_well0_length24_aScaling.npy  20220124_qfm_well1_length24_aScaling.npy  20220609-02-032_QH_nfp3_A6_aScaling.npy  ATF_aScaling.npy  CTH_0kA_aScaling.npy  CTH_highiota_0kA_aScaling.npy  Drevlak_qh_8_7_aScaling.npy  GarabedianQAS2_aScaling.npy  HSX_QHS_vacuum_ns201_aScaling.npy  HSX_without_coil_ripple_nmax4.npy  LNF1714_2537_almostARIESCScaled_beta4.npy  NuhrenbergZille_1988_QHS_aScaling.npy  QA_beta0p025_iota0p42_dreopt_HIGHERRES_2022-04-15.npy  QI_NFP1_r1_test_aScaling.npy  QI_nfp1_aScaling.npy  QI_nfp2_aScaling.npy  QI_nfp3_aScaling.npy  QPS_030703_r1_5mod_bt2_aScaling.npy  TJII_100_44_64_0.0_aScaling.npy  W7-X_standard_configuration_aScaling.npy  aten_hires_aScaling.npy  bila_a3b25_aScaling.npy  cfqs_2b40_hires_aScaling.npy  cnt32_368_aScaling.npy  d23p4_tm_gamma0_aScaling.npy  estell_24_scaled_aScaling.npy  li383_1.4m_aScaling.npy  multiopt_scan_QH_nfp3_20210924-01-046_QH_nfp3_no_magwell_smaller_6551_aScaling.npy  multiopt_scan_QH_nfp4_20210924-01-031_target_grad_grad_B_5027_aScaling.npy  n3are_R7.75B5.7.npy  n4qh.b4.a79a_aScaling.npy  ncsx_c09r00_fixed_aScaling.npy  new_QA_aScaling.npy  new_QA_magwell_aScaling.npy  new_QH_hires_aScaling.npy  (+4 more)
objectives/: QA_sign_flip_test.py  f_b_and_k_operators.py  f_b_and_k_operators_jax.py  grid_curvature_operator.py  grid_curvature_operator_jax.py  operator_helper legacy.py  operator_helper.py  self_force_operator.py  self_force_operator_jax.py  test_QA.py  test_f_b_and_k_operators.py  test_kdotnablak.py  test_operator_helper.py  test_self_force.py
objectives/.ipynb_checkpoints/: f_b_and_k_operators-checkpoint.py
src/biest_call_cpp/: biest_call.cpp
